testdata/golden/hir_borrow/invalid/spawn_escape.hir
warning SEM3004 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:5 declaration of 't' shadows previous binding
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:26 cannot send 'r' to a task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1327) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2655(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1328) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let t: type#1594 = task use_ref(r): type#1594: type#1594
  await(t): type#1595
  return
}

borrow edges:
  L2657(r) (&) borrows L2656(x) at 0:87-89 scope=S5
events:
  borrow_start L2657(r) -> L2656(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2657(r) -> L2656(x) at 0:116-117 scope=S5 note="B1"
  move L2658(t) at 0:124-125 scope=S5
  borrow_end L2657(r) -> L2656(x) scope=S5 note="scope_end B1"
move plan:
  L2656(x): MoveCopy (copy type)
  L2657(r): MoveForbidden (task escape)
  L2658(t): MoveNeedsDrop (non-copy (drop))

